--- a/src/scss/common/_title.scss
+++ b/src/scss/common/_title.scss
@@ -1,10 +1,6 @@
 %base-title {
   font-family: $title-ff;
-  font-weight: normal;
+  font-weight: 400;
   letter-spacing: 1px;
   text-transform: uppercase;
-}
-
-.header-title {
-  margin-left: 15px;
 }
