--- a/src/scss/sections/_contacts-section.scss
+++ b/src/scss/sections/_contacts-section.scss
@@ -19,6 +19,7 @@
   }
 
   &__header {
+    font-size: 3.6rem;
     margin-left: 15px;
 
     @media (max-width: 1199px) {
@@ -35,8 +36,24 @@
     margin: 20px 0 65px;
     width: 400px;
 
+    @media (max-width: 575px) {
+      margin-bottom: 30px;
+    }
+
     li {
       margin-bottom: 15px;
+    }
+
+    &-icon {
+      display: block;
+      height: 29px;
+      position: absolute;
+      width: 29px;
+
+      @media (max-width: 575px) {
+        height: 20px;
+        width: 20px;
+      }
     }
 
     &-text {
@@ -45,19 +62,16 @@
       font-size: 1.8rem;
       font-weight: $body-fw;
       line-height: 1.5;
-      margin-left: 23px;
+      margin-left: 45px;
 
       @media (max-width: 575px) {
         font-size: 1.3rem;
-        margin-left: 20px;
       }
     }
   }
 
   &__img {
-    height: 525px;
     position: relative;
-    width: 429px;
     z-index: 1;
 
     @media (max-width: 1199px) {
@@ -70,25 +84,26 @@
     }
 
     &::before {
-      background-image: url(../images/image-4.jpg);
+      background-image: url(../images/photographer-image-4.webp);
+      bottom: -20px;
       content: "";
       display: block;
       height: 525px;
-      left: 25px;
       opacity: 0.5;
       position: absolute;
-      top: 25px;
+      right: 50px;
       width: 429px;
       z-index: -2;
 
       @media (max-width: 1199px) {
-        height: 455px;
-        width: 370px;
+        display: none;
       }
     }
 
     &--first {
+      height: auto;
       margin: 65px 0 0 90px;
+      width: 429px;
 
       @media (max-width: 1199px) {
         margin: 40px 0 0 40px;
@@ -96,10 +111,12 @@
     }
 
     &--second {
-      margin: 130px 0 0 60px;
+      height: auto;
+      margin: 130px 0 0 90px;
+      width: 429px;
 
       @media (max-width: 1199px) {
-        margin: 0 auto;
+        margin: 0 0 0 50px;
       }
     }
   }
@@ -119,7 +136,7 @@
     }
 
     @media (max-width: 575px) {
-      margin: 10px 0 90px;
+      margin: 0 0 40px;
       width: 345px;
     }
 
@@ -172,20 +189,18 @@
     &-list {
       margin-top: 35px;
 
+      @media (max-width: 575px) {
+        display: flex !important;
+        justify-content: space-between;
+        margin: 20px auto;
+        padding: 0 70px;
+      }
+
       &-item {
         height: 35px;
         margin-right: 30px;
         width: 31px;
       }
     }
-  }
-}
-
-.iconify {
-  height: 25px;
-  width: 26px;
-
-  &-footer {
-    color: $text-white;
   }
 }
