--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
-$main-font: "Prata", sans-serif;
-$second-font: "Montserrat", sans-serif;
+$main-font: Prata, sans-serif;
+$second-font: Montserrat, sans-serif;
 
 // Text Colors
 $text-gray: #333;
@@ -42,24 +42,9 @@ $container-max-width: (
 $displays: none, inline-block, block, flex;
 
 // Titles
-$title-h1-fz: 3.6rem;
-$title-h2-fz: 3.6rem;
-$title-h3-fz: 2.8rem;
-$title-h4-fz: 1.8rem;
-$title-h5-fz: 1.3rem;
-$title-h6-fz: 1rem;
 
 $title-ff: $main-font;
 $title-color: $text-gray;
-
-$title-sizes: (
-  h1: $title-h1-fz,
-  h2: $title-h2-fz,
-  h3: $title-h3-fz,
-  h4: $title-h4-fz,
-  h5: $title-h5-fz,
-  h6: $title-h6-fz,
-);
 
 // nav
 $ease-in-out-cubic: cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -69,3 +54,75 @@ $bar-length: 28px;
 $bar-thickness: 4px;
 $nav-item-delay: 0.05s;
 $nav-width: 375px;
+
+// Carousel Bootstrap
+
+$carousel-control-color: $text-white !default;
+$carousel-control-width: 15% !default;
+$carousel-control-opacity: 1 !default;
+$carousel-control-hover-opacity: 1 !default;
+$carousel-control-transition: opacity 0.15s ease !default;
+
+$carousel-indicator-width: 30px !default;
+$carousel-indicator-height: 5px !default;
+$carousel-indicator-hit-area-height: 10px !default;
+$carousel-indicator-spacer: 3px !default;
+$carousel-indicator-active-bg: #bab5b5 !default;
+$carousel-indicator-transition: opacity 0.6s ease !default;
+
+$carousel-caption-width: 70% !default;
+$carousel-caption-color: $text-white !default;
+
+$carousel-control-icon-width: 40px !default;
+
+$carousel-transition-duration: 0.6s !default;
+$carousel-transition: transform $carousel-transition-duration ease-in-out !default;
+
+$enable-caret: true !default;
+$enable-rounded: true !default;
+$enable-shadows: false !default;
+$enable-gradients: false !default;
+$enable-transitions: true !default;
+$enable-prefers-reduced-motion-media-query: true !default;
+$enable-hover-media-query: false !default;
+$enable-grid-classes: true !default;
+$enable-pointer-cursor-for-buttons: true !default;
+$enable-print-styles: true !default;
+$enable-responsive-font-sizes: false !default;
+$enable-validation-icons: true !default;
+$enable-deprecation-messages: true !default;
+
+$transition-base: all 0.2s ease-in-out !default;
+$transition-fade: opacity 0.15s linear !default;
+$transition-collapse: height 0.35s ease !default;
+
+// Modals
+
+$modal-title-line-height: 1;
+$modal-dialog-margin: 0.5rem !default;
+
+$modal-content-color: null !default;
+$modal-content-bg: #fff;
+$modal-content-border-color: #000;
+$modal-content-border-width: 2px;
+$modal-content-border-radius: 10%;
+
+$modal-backdrop-bg: #000;
+$modal-backdrop-opacity: 0.5 !default;
+$modal-header-border-color: #000;
+$modal-footer-border-color: $modal-header-border-color !default;
+$modal-header-border-width: $modal-content-border-width !default;
+$modal-footer-border-width: $modal-header-border-width !default;
+$modal-header-padding-y: 1rem !default;
+$modal-header-padding-x: 1rem !default;
+$modal-header-padding: $modal-header-padding-y $modal-header-padding-x !default;
+
+$modal-xl: 1140px !default;
+$modal-lg: 800px !default;
+$modal-md: 500px !default;
+$modal-sm: 300px !default;
+
+$modal-fade-transform: translate(0, -50px) !default;
+$modal-show-transform: none !default;
+$modal-transition: transform 0.3s ease-out !default;
+$modal-scale-transform: scale(1.02) !default;
