--- a/src/scss/common/_button.scss
+++ b/src/scss/common/_button.scss
@@ -18,7 +18,7 @@
   @media (max-width: 575px) {
     font-size: 1.6rem;
     height: 45px;
-    margin: 10px auto 0;
+    margin: 0 25% 30px;
     text-transform: inherit;
     width: 200px;
   }
