--- a/src/scss/common/_form.scss
+++ b/src/scss/common/_form.scss
@@ -1,8 +1,9 @@
 .contact-form {
-  &__input-wrapper {
+  &__wrapper {
     border: 2px solid $text-gray-3;
-    margin: 0 auto 20px;
+    margin: 10px auto 20px;
     max-width: 385px;
+    overflow: hidden;
     position: relative;
     width: 100%;
 
@@ -16,24 +17,22 @@
         width: 50rem;
       }
     }
-  }
 
-  &__input {
-    box-sizing: border-box;
-    font-family: $second-font;
-    font-size: 1.8rem;
-    height: 40px;
-    max-width: 360px;
-    padding: 0 15px;
-    width: 100%;
+    &-input {
+      box-sizing: border-box;
+      font-family: $second-font;
+      font-size: 1.8rem;
+      height: 40px;
+      max-width: 360px;
+      padding: 0 15px;
+      width: 100%;
 
-    @media (max-width: 575px) {
-      height: 25px;
+      @media (max-width: 575px) {
+        height: 25px;
+      }
     }
   }
-}
 
-.contact-form {
   &__error-name {
     color: #e93223;
     font-family: $second-font;
@@ -56,7 +55,12 @@
   }
 
   &__button {
+    cursor: pointer;
     text-align: center;
+
+    @media (max-width: 575px) {
+      margin: 0;
+    }
 
     &-modal {
       margin-bottom: 35px;
@@ -101,6 +105,11 @@
     width: 500px;
     z-index: 999;
 
+    @media (max-width: 575px) {
+      padding: 60px 24px 0;
+      width: 305px;
+    }
+
     &-text {
       box-sizing: border-box;
       font-family: "Montserrat", sans-serif;
@@ -109,6 +118,10 @@
       margin: 0 auto;
       max-width: 360px;
       width: 100%;
+
+      @media (max-width: 575px) {
+        font-size: 1.7rem;
+      }
     }
   }
 }
