--- a/src/scss/common/_modal.scss
+++ b/src/scss/common/_modal.scss
@@ -1,33 +1,155 @@
+body.modal-open {
+  height: 100%;
+  overflow: visible;
+  position: absolute;
+  width: 100%;
+}
+
 .modal {
-  align-items: center;
-  bottom: 0;
   display: none;
-  justify-content: center;
+  height: 100%;
+  left: 0;
+  outline: 0;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1050;
+
+  &--close {
+    color: #666;
+    cursor: pointer;
+    float: right;
+    font-family: helvetica, arial;
+    font-size: 30px;
+    margin: 15px 15px 0 0;
+
+    @media (max-width: 575px) {
+      margin: 0;
+    }
+  }
+
+  button:focus {
+    border: 0;
+  }
+}
+
+.modal-dialog {
+  margin: 10px;
+  pointer-events: none;
+  position: relative;
+  width: auto;
+
+  .modal.fade & {
+    @include transition($modal-transition);
+    transform: $modal-fade-transform;
+  }
+
+  .modal.show & {
+    transform: $modal-show-transform;
+  }
+
+  .modal.modal-static & {
+    transform: $modal-scale-transform;
+  }
+}
+
+.modal-dialog-scrollable {
+  display: flex;
+  max-height: subtract(100%, $modal-dialog-margin * 2);
+
+  .modal-content {
+    max-height: subtract(100vh, $modal-dialog-margin * 2);
+    overflow: hidden;
+  }
+
+  .modal-header,
+  .modal-footer {
+    flex-shrink: 0;
+  }
+
+  .modal-body {
+    overflow-y: auto;
+  }
+}
+
+.modal-dialog-centered {
+  align-items: center;
+  display: flex;
+  min-height: subtract(100%, $modal-dialog-margin * 2);
+
+  &::before {
+    content: "";
+    display: block;
+    height: subtract(100vh, $modal-dialog-margin * 2);
+    height: min-content;
+  }
+
+  &.modal-dialog-scrollable {
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+
+    .modal-content {
+      max-height: none;
+    }
+
+    &::before {
+      content: none;
+    }
+  }
+}
+
+.modal-content {
+  background-clip: padding-box;
+  background-color: $modal-content-bg;
+  color: $modal-content-color;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  outline: 0;
+  pointer-events: auto;
+  position: relative;
+  width: 500px;
+
+  @media (max-width: 575px) {
+    width: 300px;
+  }
+}
+
+.modal-backdrop {
+  background-color: $modal-backdrop-bg;
+  height: 100vh;
   left: 0;
   position: fixed;
-  right: 0;
   top: 0;
+  width: 100vw;
+  z-index: 1040;
+
+  &.fade {
+    opacity: 0;
+  }
+
+  &.show {
+    opacity: $modal-backdrop-opacity;
+  }
 }
 
-.modal--open {
-  display: flex;
+.modal-title {
+  line-height: $modal-title-line-height;
+  margin-bottom: 0;
 }
 
-.modal-open .modal {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  padding: 0;
+.modal-body {
+  flex: 1 1 auto;
+  padding: 10px;
+  position: relative;
 }
 
-.modal--close {
-  color: #666;
-  float: right;
-  font-family: helvetica, arial;
-  font-size: 30px;
-  margin: 15px 15px 0 0;
-}
-
-button:focus {
-  border: 0;
+.modal-scrollbar-measure {
+  height: 50px;
+  overflow: scroll;
+  position: absolute;
+  top: -9999px;
+  width: 50px;
 }
