--- a/src/scss/mixins/_title.scss
+++ b/src/scss/mixins/_title.scss
@@ -1,12 +1,6 @@
-@mixin make-titles($sizes: $title-sizes, $color: $title-color) {
+@mixin make-titles($color: $title-color) {
   .title {
     @extend %base-title;
     color: $color;
-
-    @each $name, $value in $sizes {
-      &--#{$name} {
-        font-size: $value;
-      }
-    }
   }
 }
