--- a/src/scss/sections/_addition-section.scss
+++ b/src/scss/sections/_addition-section.scss
@@ -12,11 +12,12 @@
 
   .container {
     @media (max-width: 575px) {
-      margin-bottom: 40px;
+      margin-bottom: 10px;
     }
   }
 
   &__header {
+    font-size: 3.6rem;
     margin-left: 15px;
 
     @media (max-width: 1199px) {
