--- a/src/scss/sections/_portfolio-section.scss
+++ b/src/scss/sections/_portfolio-section.scss
@@ -13,6 +13,7 @@
   }
 
   &__header {
+    font-size: 3.6rem;
     margin: 0 15px 50px;
     @media (max-width: 1199px) {
       h2 {
@@ -21,7 +22,7 @@
     }
 
     @media (max-width: 575px) {
-      margin: 0 0 30px;
+      margin: 0;
 
       h2 {
         font-size: 2rem;
@@ -37,6 +38,7 @@
   &__title {
     color: $text-gray-4;
     font-family: $second-font;
+    font-size: 1.8rem;
     line-height: 1.66;
     margin-bottom: 45px;
     text-transform: inherit;
@@ -105,7 +107,7 @@
 
     @media (max-width: 575px) {
       margin-left: 0;
-      margin-top: 80px;
+      margin-top: 30px;
       width: 385px;
     }
   }
@@ -121,6 +123,7 @@
     &-title {
       color: $text-gray;
       font-family: $second-font;
+      font-size: 1.8rem;
       font-weight: $body-fw-md;
       line-height: 1.66;
       margin-bottom: 15px;
