--- a/src/scss/common/_carousel.scss
+++ b/src/scss/common/_carousel.scss
@@ -2,6 +2,10 @@
   margin-top: 80px;
   position: relative;
 
+  @media (max-width: 1199px) {
+    margin-top: 20px;
+  }
+
   @media (max-width: 575px) {
     margin-top: 30px;
   }
@@ -32,6 +36,11 @@
   height: 452px;
   object-fit: cover;
   width: 680px;
+
+  @media (max-width: 1199px) {
+    height: auto;
+    width: 100%;
+  }
 
   @media (max-width: 575px) {
     height: 229px;
