--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -65,7 +65,7 @@ textarea {
   padding: 20px 15px 0;
   resize: none;
 
-  @media (max-width: 575px) {
+  @media (max-width: 767px) {
     padding: 10px;
   }
 }
@@ -76,6 +76,10 @@ textarea::placeholder {
   font-size: 1.7rem;
   opacity: 1;
   transition: opacity 0.3s ease;
+
+  @media (max-width: 991px) {
+    font-size: 1.5rem;
+  }
 
   @media (max-width: 575px) {
     font-size: 1.2rem;
