--- a/src/scss/common/_form.scss
+++ b/src/scss/common/_form.scss
@@ -7,9 +7,25 @@
     position: relative;
     width: 100%;
 
+    @media (max-width: 991px) {
+      margin: 10px 0 15px;
+      width: 345px;
+    }
+
+    @media (max-width: 767px) {
+      margin: 10px 0 15px;
+      width: 200px;
+
+      textarea {
+        font-size: 1rem;
+        height: 5rem;
+        width: 40rem;
+      }
+    }
+
     @media (max-width: 575px) {
       margin: 0 0 10px;
-      max-width: 300px;
+      width: 280px;
 
       textarea {
         font-size: 1rem;
@@ -27,7 +43,7 @@
       padding: 0 15px;
       width: 100%;
 
-      @media (max-width: 575px) {
+      @media (max-width: 767px) {
         height: 25px;
       }
     }
@@ -48,9 +64,13 @@
     margin-bottom: 10px;
     margin-left: 10%;
 
+    @media (max-width: 991px) {
+      font-size: 1.5rem;
+      margin: 0;
+    }
+
     @media (max-width: 575px) {
       font-size: 1.3rem;
-      margin: 0;
     }
   }
 
@@ -66,7 +86,7 @@
       margin-bottom: 35px;
       margin-left: 10%;
 
-      @media (max-width: 575px) {
+      @media (max-width: 991px) {
         margin-left: 0;
       }
     }
