--- a/src/scss/sections/_charity-section.scss
+++ b/src/scss/sections/_charity-section.scss
@@ -4,7 +4,10 @@
 
   .container {
     margin-bottom: 60px;
-    @media (max-width: 575px) {
+    @media (max-width: 991px) {
+      margin-bottom: 50px;
+    }
+    @media (max-width: 767px) {
       margin-bottom: 40px;
     }
   }
@@ -18,8 +21,11 @@
       margin-bottom: 10px;
     }
 
-    @media (max-width: 575px) {
+    @media (max-width: 767px) {
       font-size: 2rem;
+    }
+
+    @media (max-width: 575px) {
       margin: 0 0 20px;
       text-align: center;
     }
@@ -29,6 +35,17 @@
     @media (max-width: 575px) {
       margin: 0 auto;
     }
+
+    &--resp {
+      @media (max-width: 767px) {
+        display: flex;
+        position: relative;
+      }
+
+      @media (max-width: 575px) {
+        display: inline-block;
+      }
+    }
   }
 
   &__desc {
@@ -37,6 +54,10 @@
     line-height: 1.5;
     margin: 0 0 35px 15px;
     text-transform: none;
+
+    @media (max-width: 767px) {
+      font-size: 1.5rem;
+    }
 
     @media (max-width: 575px) {
       text-align: center;
@@ -52,6 +73,10 @@
     @media (max-width: 1199px) {
       margin-bottom: 30px;
       width: 90%;
+    }
+
+    @media (max-width: 767px) {
+      margin-right: 30px;
     }
 
     @media (max-width: 575px) {
