--- a/src/scss/sections/_footer-section.scss
+++ b/src/scss/sections/_footer-section.scss
@@ -23,8 +23,17 @@
     }
 
     &--social {
+      @media (max-width: 767px) {
+        svg {
+          display: none;
+        }
+      }
       @media (max-width: 575px) {
         display: none;
+      }
+
+      svg {
+        margin-right: 23px;
       }
     }
   }
@@ -55,7 +64,7 @@
     font-size: 2rem;
     font-weight: $body-fw;
     line-height: 1.2;
-    margin: 0 0 20px 23px;
+    margin: 0 0 20px;
 
     &:hover {
       color: $text-gray-2;
@@ -65,8 +74,13 @@
       font-size: 1.5rem;
     }
 
+    @media (max-width: 991px) {
+      font-size: 1.4rem;
+    }
+
     @media (max-width: 575px) {
       font-size: 1.7rem;
+      margin-left: 35px;
     }
   }
 
