--- a/src/scss/sections/_intro-section.scss
+++ b/src/scss/sections/_intro-section.scss
@@ -4,7 +4,7 @@
   position: relative;
 
   @media (max-width: 1199px) {
-    padding: 0 0 30px;
+    padding: 0 0 50px;
   }
 
   @media (max-width: 575px) {
@@ -33,7 +33,7 @@
 
     &::after {
       border: 4px solid #fff;
-      bottom: 18px;
+      bottom: 33px;
       content: "";
       display: block;
       height: auto;
@@ -59,10 +59,10 @@
     z-index: 99;
 
     @media (max-width: 1199px) {
-      transform: translateX(220px) translateY(20px);
+      transform: translateX(280px) translateY(20px);
     }
 
-    @media (max-width: 575px) {
+    @media (max-width: 991px) {
       display: none;
     }
 
@@ -86,10 +86,6 @@
 
     @media (max-width: 1199px) {
       height: auto;
-    }
-
-    @media (max-width: 575px) {
-      height: 100%;
       width: 100%;
     }
   }
@@ -100,8 +96,17 @@
   width: 540px;
 
   @media (max-width: 1199px) {
+    margin: 0 0 0 30px;
+    width: auto;
+  }
+
+  @media (max-width: 767px) {
+    padding-right: 15px;
+  }
+
+  @media (max-width: 575px) {
     margin: 0;
-    width: 100%;
+    padding-right: 0;
   }
 
   &__title {
@@ -116,8 +121,12 @@
       margin: 35px 0;
     }
 
-    @media (max-width: 575px) {
+    @media (max-width: 767px) {
       font-size: 2rem;
+      margin: 20px auto;
+    }
+
+    @media (max-width: 575px) {
       margin: 30px auto;
       text-align: center;
     }
@@ -130,8 +139,11 @@
     line-height: 1.7;
     text-transform: none;
 
+    @media (max-width: 767px) {
+      font-size: 1.5rem;
+    }
+
     @media (max-width: 575px) {
-      font-size: 1.6rem;
       line-height: 1.5;
       margin: 0;
       padding: 0 25px 30px;
@@ -150,5 +162,13 @@
     height: auto;
     margin: 35px 25% 0;
     width: 50%;
+  }
+
+  @media (max-width: 767px) {
+    margin: 25px 0 0;
+  }
+
+  @media (max-width: 575px) {
+    margin: 10px 25%;
   }
 }
