--- a/src/scss/sections/_products-section.scss
+++ b/src/scss/sections/_products-section.scss
@@ -12,7 +12,7 @@
   }
 
   .container {
-    @media (max-width: 575px) {
+    @media (max-width: 767px) {
       margin-bottom: 40px;
     }
   }
@@ -31,13 +31,13 @@
       font-size: 3rem;
     }
 
+    @media (max-width: 767px) {
+      font-size: 2rem;
+    }
+
     @media (max-width: 575px) {
       margin-left: 0;
       text-align: center;
-
-      h2 {
-        font-size: 2rem;
-      }
     }
   }
 
@@ -51,7 +51,20 @@
     width: 350px;
 
     @media (max-width: 1199px) {
+      height: 100%;
       width: 290px;
+    }
+
+    @media (max-width: 991px) {
+      margin-right: 15px;
+      padding: 20px 10px;
+      width: auto;
+    }
+
+    @media (max-width: 767px) {
+      height: 400px;
+      margin: 30px auto;
+      width: 350px;
     }
 
     @media (max-width: 575px) {
@@ -77,6 +90,10 @@
       margin-bottom: 25px;
       text-align: center;
       text-transform: uppercase;
+
+      @media (max-width: 991px) {
+        font-size: 2.2rem;
+      }
 
       @media (max-width: 575px) {
         font-size: 2rem;
@@ -104,6 +121,10 @@
       li {
         margin-bottom: 10px;
       }
+
+      @media (max-width: 991px) {
+        font-size: 1.4rem;
+      }
     }
 
     &-btn {
@@ -116,6 +137,23 @@
       @media (max-width: 1199px) {
         left: 15%;
       }
+
+      @media (max-width: 991px) {
+        height: 40px;
+        left: 25%;
+        width: 120px;
+      }
+
+      @media (max-width: 767px) {
+        bottom: 10%;
+        height: 35px;
+        left: 30%;
+        width: 150px;
+      }
+
+      @media (max-width: 575px) {
+        left: 25%;
+      }
     }
 
     &--resp {
@@ -124,6 +162,7 @@
       @media (max-width: 575px) {
         display: block;
         margin: 20px auto;
+        width: 300px;
       }
     }
   }
