--- a/src/scss/common/_form.scss
+++ b/src/scss/common/_form.scss
@@ -14,13 +14,7 @@
 
     @media (max-width: 767px) {
       margin: 10px 0 15px;
-      width: 200px;
-
-      textarea {
-        font-size: 1rem;
-        height: 5rem;
-        width: 40rem;
-      }
+      width: 240px;
     }
 
     @media (max-width: 575px) {
@@ -49,11 +43,20 @@
     }
   }
 
-  &__error-name {
+  &__error {
     color: #e93223;
     font-family: $second-font;
     font-size: 1.5rem;
     line-height: 1;
+    margin: 0 0 10px 50px;
+
+    @media (max-width: 991px) {
+      margin: 0 0 10px;
+    }
+
+    @media (max-width: 575px) {
+      font-size: 1rem;
+    }
   }
 
   &__label {
