--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -17,6 +17,39 @@ body {
   overflow: hidden;
 }
 
+// /** Montserrat Regular **/
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../webfonts/Montserrat-Regular.woff2") format("woff2"),
+    url("../webfonts/Montserrat-Regular.woff") format("woff");
+}
+/** Montserrat Medium **/
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../webfonts/Montserrat-Medium.woff2") format("woff2"),
+    url("../webfonts/Montserrat-Medium.woff") format("woff");
+}
+/** Montserrat SemiBold **/
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../webfonts/Montserrat-SemiBold.woff2") format("woff2"),
+    url("../webfonts/Montserrat-SemiBold.woff") format("woff");
+}
+/** Montserrat Bold **/
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../webfonts/Montserrat-Bold.woff2") format("woff2"),
+    url("../webfonts/Montserrat-Bold.woff") format("woff");
+}
+
 ul {
   list-style: none;
   margin: 0;
