--- a/src/scss/mixins/_container.scss
+++ b/src/scss/mixins/_container.scss
@@ -1,8 +1,17 @@
 @mixin make-container($width: $container-width, $gutter: $grid-gutter-width) {
-  margin-bottom: 120px;
   margin-left: auto;
   margin-right: auto;
   max-width: $width;
   padding-left: $gutter / 2;
   padding-right: $gutter / 2;
+}
+
+@mixin make-container-fluid(
+  $width: $container-fluid-width,
+  $gutter: $grid-gutter-width
+) {
+  margin-left: auto;
+  max-width: $width;
+  padding-left: 0;
+  padding-right: 0;
 }
