--- a/src/scss/sections/_author-section.scss
+++ b/src/scss/sections/_author-section.scss
@@ -1,12 +1,13 @@
 .author-section {
   overflow: hidden;
+  padding-bottom: 120px;
   position: relative;
 
-  .container {
-    @media (max-width: 1199px) {
-      margin-bottom: 50px;
-    }
+  @media (max-width: 1199px) {
+    padding-bottom: 0;
+  }
 
+  .container {
     @media (max-width: 575px) {
       margin-bottom: 30px;
     }
@@ -22,10 +23,6 @@
     }
 
     @media (max-width: 991px) {
-      display: none;
-    }
-
-    @media (max-width: 575px) {
       display: none;
     }
 
@@ -52,13 +49,6 @@
 .author-content {
   padding: 0;
   width: 685px;
-  @media (max-width: 575px) {
-    width: 345px;
-
-    div {
-      width: 100%;
-    }
-  }
 
   &__title {
     font-size: 3.6rem;
@@ -126,7 +116,6 @@
 
   @media (max-width: 575px) {
     height: auto;
-    margin-top: 30px;
-    width: 345px;
+    margin: 30px 0;
   }
 }
