--- a/src/scss/sections/_contacts-section.scss
+++ b/src/scss/sections/_contacts-section.scss
@@ -4,10 +4,6 @@
   position: relative;
 
   @media (max-width: 1199px) {
-    padding-bottom: 60px;
-  }
-
-  @media (max-width: 991px) {
     padding-bottom: 0;
   }
 
@@ -18,7 +14,7 @@
   .container {
     margin-bottom: 0;
 
-    @media (max-width: 991px) {
+    @media (max-width: 1199px) {
       margin-bottom: 60px;
     }
     @media (max-width: 767px) {
@@ -109,14 +105,14 @@
     }
 
     &::before {
-      background-image: url(../images/photographer-image-4.webp);
-      bottom: -20px;
+      background-image: url(../images/photographer-image-4.jpg);
+      bottom: -25px;
       content: "";
       display: block;
       height: 525px;
       opacity: 0.5;
       position: absolute;
-      right: 50px;
+      right: 25px;
       width: 429px;
       z-index: -2;
 
@@ -180,14 +176,16 @@
     }
 
     &-title {
-      font-family: $second-font;
+      font-family: $main-font;
       font-size: 2.4rem;
-      font-weight: 600;
+      font-weight: $body-fw;
+      margin-top: 130px;
       text-transform: none;
 
       @media (max-width: 767px) {
         font-size: 2rem;
         font-weight: 500;
+        margin-top: 0;
       }
 
       @media (max-width: 575px) {
@@ -203,7 +201,7 @@
       font-size: 1.8rem;
       font-weight: $body-fw;
       line-height: 1.5;
-      margin: 35px 0 10px;
+      margin: 15px 0 23px;
       text-align: center;
 
       @media (max-width: 991px) {
@@ -217,6 +215,7 @@
       }
 
       @media (max-width: 575px) {
+        margin: 15px 0;
         width: 300px;
       }
 
@@ -227,7 +226,6 @@
   }
 
   &__social {
-    margin-top: 130px;
     position: relative;
 
     @media (max-width: 1199px) {
