--- a/src/scss/sections/_portfolio-section.scss
+++ b/src/scss/sections/_portfolio-section.scss
@@ -1,12 +1,19 @@
 .main {
   overflow: hidden;
   position: relative;
+
+  @media (max-width: 1199px) {
+    padding: 60px;
+  }
+
+  @media (max-width: 575px) {
+    padding: 0;
+  }
 }
 
 .portfolio-section {
-  padding: 0;
-
   .container {
+    margin-bottom: 100px;
     @media (max-width: 1199px) {
       margin-bottom: 50px;
     }
@@ -43,7 +50,7 @@
     font-family: $second-font;
     font-size: 1.8rem;
     line-height: 1.66;
-    margin-bottom: 45px;
+    margin: 0 0 40px 75px;
     text-transform: inherit;
 
     @media (max-width: 1199px) {
@@ -58,7 +65,7 @@
       border-top: 2px solid #4e6655;
       content: "";
       height: 0;
-      left: -65px;
+      left: 0;
       max-width: 50px;
       position: absolute;
       top: 15px;
@@ -78,7 +85,7 @@
       border-top: 2px solid #4e6655;
       content: "";
       height: 0;
-      left: 40px;
+      left: 105px;
       max-width: 50px;
       position: absolute;
       top: 15px;
