--- a/src/scss/sections/_products-section.scss
+++ b/src/scss/sections/_products-section.scss
@@ -1,10 +1,10 @@
 .products-section {
   overflow: hidden;
-  padding: 120px 0 0;
+  padding: 100px 0;
   position: relative;
 
   @media (max-width: 1199px) {
-    padding: 60px 0 0;
+    padding: 60px 0;
   }
 
   @media (max-width: 575px) {
@@ -25,10 +25,11 @@
 
   &__header {
     font-size: 3.6rem;
-    margin-left: 15px;
+    margin: 0 0 50px 15px;
 
     @media (max-width: 1199px) {
       font-size: 3rem;
+      margin-bottom: 30px;
     }
 
     @media (max-width: 767px) {
@@ -36,7 +37,7 @@
     }
 
     @media (max-width: 575px) {
-      margin-left: 0;
+      margin-bottom: 10px;
       text-align: center;
     }
   }
@@ -45,7 +46,6 @@
     background-color: $text-light-gray-2;
     box-shadow: 0 0 25px rgba(119, 145, 126, 0.6);
     height: 480px;
-    margin-top: 50px;
     padding: 30px 0 25px;
     position: relative;
     width: 350px;
